--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -1488,7 +1488,8 @@ blockquote {
     padding: 10px 20px;
     margin: 0 0 20px;
     font-size: 17.5px;
-    border-left: 5px solid #eee
+    border-left: 5px solid #eee;
+    background-color: gainsboro
 }
 
 blockquote p:last-child, blockquote ul:last-child, blockquote ol:last-child {
