--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,6 +8,7 @@
     <i class="fa fa-lg fa-navicon"></i>
   </button>
 </div>
+{% include comment.html %}
 <script type="text/javascript" src="/public/js/jquery.js"></script>
 <script type="text/javascript" src="/public/js/bootstrap.js"></script>
 <script src="/public/js/jquery.pjax.js"></script>
